digits-eks/eks-msk/cbioportal-eks-triage-deployment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "4"
  creationTimestamp: null
  generation: 1
  labels:
    run: eks-triage
  name: eks-triage
  selfLink: /apis/extensions/v1beta1/namespaces/default/deployments/eks-triage
spec:
  replicas: 1
  selector:
    matchLabels:
      run: eks-triage
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: eks-triage
    spec:
      volumes:
      - name: triage-eks-configmap-volume
        configMap:
          name: cbioportal-triage-kc
          items:
          - key: portal.properties
            path: portal.properties
          - key: triage-cbioportal-saml-idp-metadata.xml
            path: triage-cbioportal-saml-idp-metadata.xml
          - key: triage-cbioportal-saml-keystore.jks
            path: triage-cbioportal-saml-keystore.jks
      containers:
      - envFrom:
        - configMapRef:
            name: triage-portal-eks
        image: cbioportal/cbioportal:release-genie-performance-redis-web-shenandoah
        volumeMounts:
        - name: triage-eks-configmap-volume
          mountPath: /cbioportal/portal.properties
          subPath: portal.properties
        - name: triage-eks-configmap-volume
          mountPath: /cbioportal/triage-cbioportal-saml-idp-metadata.xml
          subPath: triage-cbioportal-saml-idp-metadata.xml
        - name: triage-eks-configmap-volume
          mountPath: /cbioportal/triage-cbioportal-saml-keystore.jks
          subPath: cbioportal-saml-keystore.jks
        command: [ "/usr/bin/java" ]
        args: [
            # from https://developers.redhat.com/blog/2017/04/04/openjdk-and-containers/
            "-Xms100m",
            "-Xmx15g",
            "-XX:+UnlockExperimentalVMOptions",
            "-XX:+UseShenandoahGC",
            "-XX:ShenandoahUncommitDelay=1000",
            "-XX:ShenandoahGuaranteedGCInterval=10000",
            #"-XX:+AlwaysPreTouch",
            #"-XX:+UseTransparentHugePages",
            #"-XX:+UseNUMA",
            #"-XX:+PrintGCDetails",
            #"-XX:+UseParallelGC",
            #"-XX:+PrintGCDateStamps",
            #"-XX:ParallelGCThreads=4",
            #"-XX:+UseG1GC",
            #"-XX:+AggressiveHeap",
            # non aggressive garbage collection
            #"-XX:MinHeapFreeRatio=20",
            #"-XX:MaxHeapFreeRatio=40",
            #"-XX:GCTimeRatio=19",
            #"-XX:AdaptiveSizePolicyWeight=90",
            # This issue says to use maxRAMFraction > 1
            # https://github.com/akka/akka/issues/23499, but haven't found this
            # to work v well
            #"-XX:MaxRAMFraction=1",
            "-XX:+PrintFlagsFinal",
            "-XshowSettings:vm",
            # need to set MaxRAM, somehow the MaxRAMFraction is not picked up
            # from the limits
            #"-XX:MaxRAM=6500m",
            # enable remote debug
            "-Dcom.sun.management.jmxremote.rmi.port=8849",
            "-Dcom.sun.management.jmxremote=false",
            "-Dcom.sun.management.jmxremote.port=8849",
            "-Dcom.sun.management.jmxremote.ssl=false",
            "-Dcom.sun.management.jmxremote.authenticate=false",
            "-Dcom.sun.management.jmxremote.local.only=false",
            "-Djava.rmi.server.hostname=localhost",
            # /enable remote debug
            "-Dfrontend.url=https://deploy-preview-3741--cbioportalfrontend.netlify.app",
            "-Ddefault_cross_cancer_study_session_id=5c8a7d55e4b046111fee2296",
            "-Dquick_search.enabled=true",
            "-Dskin.footer=",
            "-Dskin.right_nav.whats_new_blurb=",
            "-Dskin.quick_select_buttons=TCGA PanCancer Atlas Studies#*pan_can_atlas*;Curated set of non-redundant studies|185 studies that are manually curated including TCGA and non-TCGA studies with no overlapping samples#acbc_mskcc_2015,acc_tcga_pan_can_atlas_2018,acyc_fmi_2014,acyc_mda_2015,acyc_mskcc_2013,acyc_sanger_2013,all_phase2_target_2018_pub,all_stjude_2016,aml_target_2018_pub,ampca_bcm_2016,angs_project_painter_2018,bfn_duke_nus_2015,blca_bgi,blca_cornell_2016,blca_dfarber_mskcc_20 [...]
            "-Dskin.example_study_queries=tcga pancancer atlas\ntcga -legacy -pancancer\ntcga or icgc\nmsk-impact\n-\"cell line\"\nbreast\nesophageal OR stomach\nprostate msk\nserous",
            "-Dskin.patientview.filter_genes_profiled_all_samples=false",
            "-Dinstallation_map_url=https://installationmap.netlify.app/",
            "-Dapp.name=eks-triage",
            # connecting over dbcp
            "-Ddbconnector=dbcp",
            "-Dauthenticate=saml",
            "-Dauthorization=false",
            "-Ddb.user=$(DB_USER)",
            "-Ddb.password=$(DB_PASSWORD)",
            "-Ddb.host=$(DB_HOST)",
            "-Ddb.connection_string=$(DB_CONNECTION_STRING)",
            "-Ddb.portal_db_name=$(DB_PORTAL_DB_NAME)",
            "-Dtomcat.catalina.scope=runtime",
            "-Dshow.transcript_dropdown=true",
            "-Dshow.civic=$(SHOW_CIVIC)",
            "-Dskin.show_tweet_button=$(SKIN_SHOW_TWEET_BUTTON)",
            "-Dskin.email_contact=cbioportal@googlegroups.com",
            "-Dskin.data_sets_footer=Data sets of published studies were curated from literature. Data sets of legacy TCGA studies were downloaded from the <a href=\"http://gdac.broadinstitute.org\">Broad Institute Firehose</a>, last updated 1/28/2016.",
            "-Dskin.data_sets_header=The table below lists the number of available samples per cancer study and data type.",
            "-Dskin.authorization_message=Welcome to cBioPortal. Logging in will allow you to access your studies and groups from any computer, and cBioPortal will also remember your study view charts preferences for each study (i.e. order of the charts, type of charts and visibility). Login is optional and not required to access any of the other features of cBioPortal.",
            "-Dskin.blurb=",
            "-Dshow.mdacc.heatmap=true",
            "-Dpriority_studies=PanCancer Studies#msk_impact_2017,metastatic_solid_tumors_mich_2017,mixed_allen_2018,summit_2018,tmb_mskcc_2018,ntrk_msk_2019,msk_ch_2020;Pediatric Cancer Studies#pptc_2019,all_phase2_target_2018_pub,rt_target_2018_pub,wt_target_2018_pub,aml_target_2018_pub,nbl_target_2018_pub,pediatric_dkfz_2017,mixed_pipseq_2017,all_stjude_2016,all_stjude_2015,es_dfarber_broad_2014,es_iocurie_2014,mbl_pcgp;Immunogenomic Studies#gbm_columbia_2019,skcm_dfci_2015,skcm_mskcc_2014,me [...]
            "-Dsession.service.url=https://session-service.cbioportal.aws.mskcc.org/api/sessions/public_portal/",
            "-Dsession.service.origin=*",
            "-Dsession.service.user=$(SESSION_SERVICE_USER_NAME)",
            "-Dsession.service.password=$(SESSION_SERVICE_USER_PASSWORD)",
            "-Dgoogle_analytics_profile_id=$(GOOGLE_ANALYTICS_PROFILE_ID)",
            "-Dgoogleplus.consumer.key=$(GOOGLE_PLUS_CONSUMER_KEY)",
            "-Dgoogleplus.consumer.secret=$(GOOGLE_PLUS_CONSUMER_SECRET)",
            "-Dmicrosoftlive.consumer.key=$(MICROSOFT_LIVE_CONSUMER_KEY)",
            "-Dmicrosoftlive.consumer.secret=$(MICROSOFT_LIVE_CONSUMER_SECRET)",
            "-Dbitly.url=$(BITLY_URL)",
            "-Dbitly.access.token=$(BITLY_ACCESS_TOKEN)",
            "-Dsentry.dsn=$(SENTRY_DSN)",
            "-Dsentry.factory=org.cbioportal.logging.SentryClientFactory",
            #"-Dsentryjs.frontend_project_endpoint=$(SENTRY_FRONTEND_DSN)",
            "-Ddb.suppress_schema_version_mismatch_errors=true",
            "-Dsitemaps=true",
            "-Doncokb.public_api.url=https://www.oncokb.org/api/v1",
            "-Doncokb.token=$(ONCOKB_TOKEN)",
            "-Dgenomenexus.url=https://v1.genomenexus.org",
            "-Dmatchminer.url=http://ec2-54-158-52-176.compute-1.amazonaws.com:5555",
            "-Dmatchminer.token=$(MATCHMINER_TOKEN)",
            # cache settings (currently redis)
#            "-Dcache.statistics_endpoint_enabled=false",
            "-Dpersistence.cache_type=redis",
            "-Dredis.leader_address=redis://cbioportal-persistence-redis-master:6379",
            "-Dredis.follower_address=redis://cbioportal-persistence-redis-master:6379",
            "-Dredis.database=3",
            "-Dredis.password=$(REDIS_PASSWORD)",
            "-Dehcache.cache_type=none",
            # misc frontend settings (this is NOT for backend persistence layer caching)
            "-Denable_persistent_cache=false",
            # compress on client side
            "-Denable_request_body_gzip_compression=true",
            "-jar",
            "/webapp-runner.jar",
            # this addresses same issue as
            # https://github.com/cBioPortal/cbioportal/issues/2328 one needs to
            # set this if one doesn't want to forward https -> http -> https
            # when logging in through google auth. Somehow this goes over http
            # otherwise.
            "--proxy-base-url",
            "http://triage.cbioportal.aws.mskcc.org",
            "--max-threads",
            "0",
            "--session-store",
            "redis",
            "--session-store-operation-timeout",
            "10000",
            # Fix long URL https://github.com/cBioPortal/cbioportal/issues/5836
            "-AmaxHttpHeaderSize=16384",
            "-AconnectionTimeout=20000",
            "--enable-compression",
            "--port",
            "8888",
            "/app.war"
        ]
        imagePullPolicy: Always
        readinessProbe:
          httpGet:
            path: /api/health
            port: 8888
          initialDelaySeconds: 45
          timeoutSeconds: 1
          periodSeconds: 5
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /
            port: 8888
          initialDelaySeconds: 180
          timeoutSeconds: 1
          periodSeconds: 12
          failureThreshold: 5
        name: eks-triage
        ports:
        - containerPort: 8888
          protocol: TCP
        - containerPort: 8849
          protocol: TCP
        resources:
          requests:
              cpu: 1500m
              memory: 4Gi
          limits:
              memory: 8Gi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      # run on big memory machine
      nodeSelector:
        eks.amazonaws.com/nodegroup: msk-cbioportal
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    run: eks-triage
  name: eks-triage
  selfLink: /api/v1/namespaces/default/services/eks-triage
spec:
  ports:
  - port: 80
    name: http
    targetPort: 8888
  selector:
    run: eks-triage
  type: ClusterIP
