digits-eks/eks-msk/session_service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "4"
  creationTimestamp: null
  generation: 1
  labels:
    run: cbioportal-session-service
  name: cbioportal-session-service
  selfLink: /apis/extensions/v1beta1/namespaces/default/deployments/cbioportal-session-service
spec:
  replicas: 2
  selector:
    matchLabels:
      run: cbioportal-session-service
  strategy:
    rollingUpdate:
      maxSurge: 3
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: cbioportal-session-service
    spec:
      containers:
      - env:
        - name: SERVER_PORT
          value: "8888"
        - name: MONGODB_ROOT_PASSWORD
          valueFrom: 
            secretKeyRef:
              name: cbioportal-session-service-mongo-mongodb
              key: mongodb-root-password
        image: cbioportal/session-service:0.3.0
        command: ["java"]
        args: [
                  "-Dspring.data.mongodb.uri=mongodb://root:$(MONGODB_ROOT_PASSWORD)@cbioportal-session-service-mongo-mongodb:27017/session_service?authSource=admin",
                  "-Dsecurity.basic.enabled=true",
                  "-Dsecurity.user.name=$(USER_NAME)",
                  "-Dsecurity.user.password=$(USER_PASSWORD)",
                  "-jar",
                  "/app.war"
        ]
        imagePullPolicy: Always
        readinessProbe:
          tcpSocket:
            port: 8888
          initialDelaySeconds: 30
          timeoutSeconds: 2
          periodSeconds: 5
        name: cbioportal-session-service
        ports:
        - containerPort: 8888
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    run: cbioportal-session-service
  name: cbioportal-session-service
  selfLink: /api/v1/namespaces/default/services/cbioportal-session-service
spec:
  ports:
  - port: 80
    name: http
    targetPort: 8888
  selector:
    run: cbioportal-session-service
  type: ClusterIP
