digits-eks/eks-msk/eks-msk-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eks-demo-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
    #cert-manager.io/cluster-issuer: "letsencrypt-staging"
#  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: "eks-msk.cbioportal.org"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: eks-msk
            port:
              number: 80
  - host: "eks-prod-session-service.cbioportal.org"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: cbioportal-session-service
            port:
              number: 80
#  - host: "eks-prod-keycloak.cbioportal.org"
#    http:
#      paths:
#      - path: "/"
#        pathType: Prefix
#        backend:
#          service:
#            name: eks-keycloak-http
#            port:
              number: 80
